<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Splitty</string>
    <string name="events_title">Groups</string>
    <string name="action_edit_event">Edit Group</string>
    <string name="action_delete_event">Delete Group</string>
    <string name="add_event">Add Group</string>
    <string name="create_event">Create Group</string>
    <string name="join_event">Join Group</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount_hint">Amount in %s</string>
    <string name="paid_by">Paid by</string>
    <string name="me">Me</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="debts">Debts</string>
    <string name="name">Name</string>
    <string name="participants">Participants</string>
    <string name="add_participant">Add participant</string>
    <string name="enter_username">Please enter a username</string>
    <string name="cancel">Cancel</string>
    <string name="recently_used">Recently Used</string>
    <string name="attendees">Attendees</string>
    <string name="add_event_help">Choose a name for your new group:</string>
    <string name="add_event_currency_help">Choose a default currency:</string>
    <string name="add_participants_help">Add all the people you want to split a bill with here</string>
    <string name="next">Next &gt;</string>
    <string name="expense_text_with_description" formatted="false">%s for %s</string>
    <string name="expense_text_without_description" formatted="false">%s</string>
    <string name="expense_attendees" formatted="false">Attendees: %s</string>
    <string name="remove_expense">Remove Expense</string>
    <string name="navigation_drawer_title">Choose Group</string>
    <string name="nav_drawer_open_desc">Open group list</string>
    <string name="nav_drawer_close_desc">Close group list</string>
    <string name="start">Start &gt;</string>
    <string name="groups_header">GROUPS</string>
    <string name="welcome_message">Welcome to Splitty!</string>
    <string name="your_name">Your name</string>
    <string name="share">Share</string>
    <string name="share_template" formatted="false">Hi,\nThe following debts have been calculated by Splitty:\n\n %s \n\n Regards,\n %s</string>
    <string name="add_event_help_text">Welcome to Splitty! Start by creating a new group.</string>
    <string name="delete_event_alert_message">"You will lose all expenses assigned to this group!"</string>
    <string name="delete_event_alert_title">"Delete this group?"</string>
    <string name="delete">Delete</string>
    <string name="error_remove_user">User can not be removed</string>
    <string name="event_details_help_text">Congratulations! Now you can start adding expenses. The expense amount will be split equally among the attendants.</string>
    <string name="overview">Overview</string>
    <string name="expenses">Expenses</string>
    <string name="edit_template">Edit: %s</string>
    <string name="settings_google_analytics">Google Analytics</string>
    <string name="settings_google_analytics_description">Enable Google Analytics to help us improve Splitty.</string>
    <string name="settings">Settings</string>
    <string name="beam_event">Beam group</string>
    <string name="beam_event_title_template">Beam group %s</string>
    <string name="beam_event_message">Tap your phone against another phone with Splitty installed to share this group.</string>
    <string name="beam_event_error">Android Beam or Bluetooth is not available on your phone. You can not beam a group.</string>
    <string name="beam_event_receiving">Receiving a group</string>
    <string name="importEvent">Import &gt;</string>
    <string name="beam_communication_error">An error occurred. Turn around and run away.</string>
    <string name="beam_event_sending">Beaming group</string>
    <string name="access_denied_event">You can only edit your own groups.</string>
    <string name="access_denied_expense">You can only edit your own expenses.</string>
    <string name="beam_received">Group has been successfully exchanged.</string>
    <string name="beam_select_yourself">Select which user you are:</string>
    <string name="join_as_new_user">Join as new user</string>
    <string name="can_not_join_group">You can not join this group.</string>
    <string name="beam_services_unavailable">Can\'t beam group because the following services are not enabled</string>
    <string name="beam_enable_bluetooth">Turn on Bluetooth</string>
    <string name="beam_enable_nfc">Turn on NFC</string>
    <string name="beam_enable_nfc_beam">Turn on Android Beam</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="mark_debt_as_paid">Do you want to mark this debt as paid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_debt_as_paid_title">Mark as paid</string>
    <string name="paid_debt">Paid debt</string>
    <string name="choose_group_help">Choose a group for the new user to join</string>
    <string name="choose_event">Choose Group</string>
    <string name="add_or_replace_participant">Add/Replace Participant</string>
    <string name="create_new_user">Create New Participant</string>
    <string name="add_or_replace_participant_help">Either choose to create a new participant or connect with an existing one.</string>
    <string name="connect_user">Connect User</string>
</resources>