<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/event_details_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ch.pantas.billsplitter.ui.FixedTabsView
                android:id="@+id/event_details_tabs"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#000"/>

            <android.support.v4.view.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/event_details_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:id="@+id/tutorialView"
                android:background="#D0000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/event_details_help_view"
            android:layout_gravity="left">

            <ImageView
                android:src="@drawable/ic_tutorial_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="right"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/event_details_help_text"
                android:id="@+id/textView"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:typeface="normal" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/drawer_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="#fff"
        android:clickable="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="#000">
            <ImageView
                android:src="@drawable/ic_user"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="9dp"
                android:paddingBottom="8dp"/>

            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/username_switcher"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:paddingLeft="1dp"
                android:paddingRight="8dp"
                android:clickable="true"
                android:onClick="editUserName">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/nav_drawer_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#33B5E5"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:src="@drawable/ic_menu_edit"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:padding="2dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/hidden_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#33B5E5"
                    android:textStyle="bold"
                    android:inputType="textCapWords"
                    android:textCursorDrawable="@null"/>
            </ViewSwitcher>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="#000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#fff">

            <TextView
                android:id="@+id/header"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="1dp"
                android:text="@string/groups_header"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:background="#DADADC" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_event_button"
                android:src="@drawable/ic_action_new_dark"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:paddingTop="10dp"
                android:paddingBottom="1dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DADADC" />


        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="#DADADC"
            android:dividerHeight="1dp"
            android:background="#fff"
            />

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>

